--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,25 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="200dp"
         android:text="fight"
         />
 
     <Button
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="100dp"
         android:id="@+id/button2"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="200dp"
         android:text="work"
+        />
+
+    <Button
+        android:layout_marginStart="100dp"
+        android:id="@+id/button3"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:text="test"
         />
 
 </LinearLayout>
